--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,11 +12,24 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LionSchool"
         tools:targetApi="31">
+
+        <activity
+            android:name=".Students"
+            android:exported="false"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.LionSchool"/>
+        <activity
+            android:name=".HomeActivity"
+            android:exported="false"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.LionSchool"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.LionSchool">
+            android:theme="@style/Theme.LionSchool"
+            tools:ignore="IntentFilterExportedReceiver">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
