--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,13 @@
         tools:targetApi="31">
 
         <activity
+            android:name=".PerformanceStudents"
+            android:exported="false"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.LionSchool"/>
+
+
+        <activity
             android:name=".Students"
             android:exported="false"
             android:label="@string/app_name"
